--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,10 +3,17 @@
 --------------------------------------------------------------*/
 
 @import url('https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
 
 @font-face {
   font-family: 'SourceSerifPro';
-  src: url('../fonts/fonts/SourceSerifPro-Regular.otf');
+  src: url('../fonts/fonts/SourceSerifPro-Light.otf') format('opentype');
+  font-weight: 300; /* Light */
+  font-style: normal;
+}
+@font-face {
+  font-family: 'SourceSerifPro';
+  src: url('../fonts/fonts/SourceSerifPro-Regular.otf') format('opentype');
 }
 /*--------------------------------------------------------------
 # Normalize
@@ -15,6 +22,7 @@
   /* fonts */
   --dm-serif: "DM Serif Display", serif;
   --soruce-serif: "SourceSerifPro", serif;
+  --lato: "Lato", sans-serif;
   /*color*/
   --color-0: #191B23;
   --color-1: #000000;
@@ -53,6 +61,9 @@ body {
 .source-serif{
   font-family: var(--soruce-serif);
 }
+.lato{
+  font-family: var(--lato);
+}
 a{
   display: inline-block;
 }
@@ -85,6 +96,7 @@ a{
     color: #fff;
   }
 }
+/*Slick*/
 .slick-list {
   width: 100%;
 }
@@ -111,6 +123,45 @@ a{
         width: 24px;
         border-radius: 50px;
         background-color: var(--color-5);
+      }
+    }
+  }
+}
+.custom-dot-with-arrow {
+  .slider-arrwos {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    width: 100%;
+    gap: 20px;
+    padding: 40px 0;
+    .slick-arrow {
+      line-height: 1;
+      color: #999999;
+      font-size: 19px;
+    }
+  }  
+  .slick-dots {
+    display: flex;
+    gap: 10px;
+    align-items: center;
+    justify-content: center;
+    button {
+      display: none;
+    }
+    li {
+      height: 12px;
+      width: 12px;
+      border-radius: 50%;
+      cursor: pointer;
+      background: #999999;
+      transition: all 0.3s ease-in-out;
+      &.slick-active {
+        height: 16px;
+        width: 16px;
+        border-radius: 50px;
+        background-color: #1F3650;
       }
     }
   }
@@ -147,16 +198,19 @@ a{
 @media only screen and (min-width: 320px) {
   .container-1440 {
     max-width: 100%;
+    padding: 0 20px;
   }
 }
 @media only screen and (min-width: 475px) {
   .container-1440 {
       max-width: 475px;
+      padding: 0 20px;
   }
 }
 @media only screen and (min-width: 640px) {
   .container-1440 {
-    max-width: 100%;
+    max-width: 640px;
+    padding: 0 20px;
   }
 }
 @media only screen and (min-width: 768px) {
