--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,7 +16,21 @@
 }
 @font-face {
   font-family: 'SourceSerifPro';
-  src: url('../fonts/fonts/SourceSerifPro-Regular.otf') format('opentype');
+  src: url('../fonts/fonts/source-serif-pro.regular.ttf') format('truetype');
+  font-weight: 400; /* regular */
+  font-style: normal;
+}
+@font-face {
+  font-family: 'SourceSerifPro';
+  src: url('../fonts/fonts/source-serif-pro.semibold.ttf') format('truetype');
+  font-weight: 600; /* semibold */
+  font-style: normal;
+}
+@font-face {
+  font-family: 'SourceSerifPro';
+  src: url('../fonts/fonts/SourceSerifPro-Bold.ttf') format('truetype');
+  font-weight: 700; /* semibold */
+  font-style: normal;
 }
 /*--------------------------------------------------------------
 # Normalize
@@ -279,7 +293,8 @@ canvas {
 .custom-select2 + .select2-container{
   display: block;
   position: relative;
-  .select2-selection--single {
+  width: 100% !important;
+  .select2-selection--single, .select2-selection--multiple {
     padding: 12px 16px;
     border: 1px solid #E2E8F0;
     height: auto;
@@ -313,6 +328,20 @@ canvas {
         
       }
     }
+    .select2-search__field {
+      margin: 0;
+    }
+  }
+  .select2-selection--multiple {
+    &:has(.select2-selection__choice) {
+      padding: 9px 16px;
+    }
+    .select2-search.select2-search--inline {
+      display: inline-block;
+    }
+    .select2-selection__choice {
+      /* margin-top: 0; */
+    }
   }
 }
 /*select-two dropdown*/
@@ -330,8 +359,8 @@ canvas {
   }
   .select2-results__option.select2-results__option--selectable.select2-results__option--selected,
   .select2-results__option.select2-results__option--selectable.select2-results__option--highlighted {
-    background-color: #2F4A69;
-    color: #fff;
+    background-color: #F7FAFC;
+    color: #191B23;
   }
 }
 
