--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -189,6 +189,13 @@ a{
       border-color: transparent !important;
     }
   }
+  &.style_2{
+    /* position: relative; */
+    .flatpickr-calendar{
+      position: absolute !important;
+      max-width: 315px;
+    }
+  }
 }
 /*chart js*/
 .chart-container {
@@ -354,6 +361,19 @@ canvas {
     }
     .select2-selection__choice {
       /* margin-top: 0; */
+    }
+  }
+}
+.custom-select2.style_2 + .select2-container {
+  .select2-selection--single {
+    border: none;
+    background: #F8FAFC;
+    padding: 10px 16px;
+    .select2-selection__rendered {
+      line-height: 1.5;
+      color: #5D6A83;
+      font-size: 1rem;
+      padding: 0;
     }
   }
 }
