cuastomer order by seller page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -129,6 +129,10 @@ a{
       border-color: #28B636;
     }
   }
+  &.square{
+    border-radius: 3px;
+    border-width: 2px;
+  }
 }
 .custom-table-wraper {
   .custom-checkbox {
