--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -429,6 +429,14 @@ canvas {
     }
   }
 }
+/*shop grid*/
+.single_product-card {
+  .img_part img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+}
 /*FAQ Accordion*/
 .faq-item-wraper {
   .faq-header.active{
