--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -92,6 +92,13 @@ a{
     border-color: var(--color-4) !important;
     background-color: #fff !important;
 }
+.full_image {
+  img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+}
 .custom-checkbox {
   -webkit-appearance: none;
   height: 20px;
