--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -451,6 +451,23 @@ canvas {
     }
   }
 }
+.custom-select2.style_3 + .select2-container {
+  .select2-selection--single {
+    border: 1px solid #CCCBC8;
+    background: transparent;
+    padding: 11px;
+    .select2-selection__rendered {
+      line-height: 1.5;
+      color: #1F3650;
+      font-size: .875rem;
+      padding: 0;
+    }
+    .select2-selection__arrow {
+      border-left: 1px solid #CCCBC8;
+      padding-left: 11px;
+    }
+  }
+}
 /*select-two dropdown*/
 .select2-dropdown{
   border: 1px solid #E2E8F0;
